# beleader

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md  docker-compose.yml  go.mod  go.sum  main.go  main_debug.go  main_release.go  make.ps1
backend/api/: agents.go  events.go  handle_create_project.go  handler.go  mcp.go  session_runner.go  sse.go
backend/config/: config.go
backend/db/: db.go
backend/llm/: client.go
backend/mcp/: manager.go
backend/server/: main.go
backend/session/: session.go
backend/tools/: browser.go  desktop_auto.go  exec.go  fetch.go  file_view.go  html.go  image_compress.go  register_builtin.go  registry.go  search.go  search_quick_test.go  speak.go  tools.go
desktop/: .gitignore  build.ps1  build.sh  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: orb.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: codewhale-system-prompt.md  mcp-architecture.md
gateway/: .env.example  Dockerfile  go.mod  go.sum  main.go
gateway/api/: agents.go  events.go  handler.go  mcp_handlers.go  runtime_client.go  session_runner.go  (+4 more)
robot/: Cargo.toml
runtime/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum  main.go
tool-agent/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum  main.go
web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  presets-demo.html  settings.html  vite.config.ts
(+76 files in other folders)
